# openface_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml
msg/: ActionUnit.msg  FaceFeatures.msg  Faces.msg
src/: openface_ros.cpp
