<?xml version="1.0"?>
<package>
  <name>openface_ros</name>
  <version>0.0.0</version>
  <description>The openface_ros package</description>

  <maintainer email="mcdorman@usc.edu">Braden McDorman</maintainer>
  <license>Apache 2</license>

  <author email="mcdorman@usc.edu">Braden McDorman</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>